--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2,7 +2,7 @@
     padding: 2% 10%;
 }
 #header {
-    background-color: #F9F3F3;
+    background-color: #FAF3F3;
 }
 h1 {
     font-family: 'Raleway', sans-serif;
